<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/DRlayout"
    android:visibility="gone">

    <ImageView
        android:id="@+id/DR_icon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/direct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DRText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/DR1"
        android:textColor="@color/black_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DR_icon" />

    <TextView
        android:id="@+id/DRText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/DR2"
        android:textColor="@color/black_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DRText1" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="@id/DRText2"
        app:layout_constraintRight_toRightOf="@id/DRText2"
        app:layout_constraintTop_toBottomOf="@id/DRText2">

        <TextView
            android:id="@+id/DRText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/DR3"
            android:textColor="@color/black_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tap_icon"
            app:layout_constraintEnd_toStartOf="@+id/tap_icon"
            app:layout_constraintTop_toTopOf="@+id/tap_icon" />

        <ImageView
            android:id="@+id/tap_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/search_nearby"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>