<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.connect.infixd.mobile.User.UserProfile">

    <ProgressBar
        android:id="@+id/progress_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/user_head"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ProfilePicForNtFrndIV"
                    android:layout_width="0dp"
                    android:layout_height="240dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/addimagered"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fullNameUserProfileTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/black_color"
                    android:textSize="21dp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ProfilePicForNtFrndIV" />


                <ImageView
                    android:id="@+id/facebook_imageview"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/fbgrey"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fullNameUserProfileTV" />

                <ImageView
                    android:id="@+id/google_plus"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/gpgrey"
                    app:layout_constraintBottom_toBottomOf="@+id/facebook_imageview"
                    app:layout_constraintLeft_toRightOf="@+id/facebook_imageview"
                    app:layout_constraintTop_toTopOf="@+id/facebook_imageview" />

                <ImageView
                    android:id="@+id/insta_imageview"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/instagramgrey"
                    app:layout_constraintBottom_toBottomOf="@+id/google_plus"
                    app:layout_constraintLeft_toRightOf="@+id/google_plus"
                    app:layout_constraintTop_toTopOf="@+id/google_plus" />

                <ImageView
                    android:id="@+id/twitter_imageview"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/tweetergrey"
                    app:layout_constraintBottom_toBottomOf="@+id/insta_imageview"
                    app:layout_constraintLeft_toRightOf="@+id/insta_imageview"
                    app:layout_constraintTop_toTopOf="@+id/insta_imageview" />

                <ImageView
                    android:id="@+id/callIcon"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/call_icon_grey"
                    app:layout_constraintBottom_toBottomOf="@+id/twitter_imageview"
                    app:layout_constraintLeft_toRightOf="@+id/twitter_imageview"
                    app:layout_constraintTop_toTopOf="@+id/twitter_imageview" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/location_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_head"
                android:layout_marginStart="8dp">

                <ImageView
                    android:id="@+id/locationIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/location_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/location_data_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/my_profile_location"
                    android:textColor="@color/black_color"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="@+id/locationIcon"
                    app:layout_constraintStart_toEndOf="@+id/locationIcon"
                    app:layout_constraintTop_toTopOf="@+id/locationIcon"
                    tools:layout_editor_absoluteX="24dp" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/profession_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/location_edit"
                android:layout_marginStart="8dp">

                <ImageView
                    android:id="@+id/workIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/work_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/profession_data_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/my_profile_profession"
                    android:textColor="@color/black_color"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="@+id/workIcon"
                    app:layout_constraintStart_toEndOf="@+id/workIcon"
                    app:layout_constraintTop_toTopOf="@+id/workIcon"
                    tools:layout_editor_absoluteX="24dp" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/education_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profession_edit"
                android:layout_marginStart="8dp">

                <ImageView
                    android:id="@+id/educationIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/education_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/education_data_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/my_profile_education"
                    android:textColor="@color/black_color"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="@+id/educationIcon"
                    app:layout_constraintStart_toEndOf="@+id/educationIcon"
                    app:layout_constraintTop_toTopOf="@+id/educationIcon"
                    tools:layout_editor_absoluteX="24dp" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/about_me_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/education_edit">

                <TextView
                    android:id="@+id/about_me_data_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/my_profile_about_me"
                    android:textColor="@color/black_color"
                    android:textSize="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>


            <FrameLayout
                android:id="@+id/recyclerViewerLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_me_edit">


                <android.support.v7.widget.CardView
                    android:id="@+id/fbPhotosCardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/fbIV"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/newfb" />

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginStart="8dp"
                            android:text="Connect Facebook photos"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@+id/fbIV"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/fbIV"
                            app:layout_constraintTop_toTopOf="@+id/fbIV"
                            android:layout_marginRight="16dp"
                            android:layout_marginLeft="8dp" />

                    </android.support.constraint.ConstraintLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/my_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:horizontalSpacing="10dp"
                    android:isScrollContainer="false"
                    android:scrollbars="horizontal"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </FrameLayout>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</FrameLayout>
